methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
      avance()
            ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^